# odyssey

./: .gitignore  README.md  chat.py  pyproject.toml
data/: copyright.txt  odyssey.txt  ontology.yaml  reference.txt
notebooks/: dev.ipynb  evaluate_query.ipynb
scripts/: 1_fetch_odyssey.py  2_split_books.py  3_load_documents_to_chroma.py  4_create_kg.py  fetch_odyssey.py
src/odyssey/: __init__.py  ollama_embedding_function.py  types.py
src/odyssey/adapters/: __init__.py  gradio.py
src/odyssey/models/: __init__.py  debug.py  simple_chat.py
