[project]
name = "odyssey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cameron", email = "cameronwood858@googlemail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
]

[project.scripts]
odyssey = "odyssey:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "invoke>=3.0.3",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.18",
]
